--- a/TSAR.Tests/packages.config
+++ b/TSAR.Tests/packages.config
@@ -3,6 +3,10 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.3" targetFramework="net452" />
+  <package id="Twilio" version="5.4.1" targetFramework="net452" />
 </packages>
