--- a/TSAR/packages.config
+++ b/TSAR/packages.config
@@ -16,22 +16,26 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.4" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.3" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net452" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Facebook" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Google" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Twitter" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.3" targetFramework="net452" />
+  <package id="Twilio" version="5.4.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
