--- a/MobileTsar/MobileTsar.Droid/Properties/AndroidManifest.xml
+++ b/MobileTsar/MobileTsar.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="MobileTsar.Droid"></application>
+	<uses-permission android:name="android.permission.USE_FINGERPRINT" />
+	<application android:label="MobileTsar.Droid" android:icon="@drawable/icon"></application>
 </manifest>
