--- a/MobileTsar/MobileTsar.Droid/packages.config
+++ b/MobileTsar/MobileTsar.Droid/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid70" />
+  <package id="Plugin.Fingerprint" version="1.4.5" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid70" />
